--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url: jdbc:mysql://localhost:3306/orders
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 
 flyway.baseline-on-migrate=true
