--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -3,6 +3,13 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 version: 2
+machine:
+  node:
+    version: 6.9.1
+  environment:
+    MYSQL_PORT: 3306
+    MYSQL_USER: root
+    MYSQL_PASSWORD: password
 jobs:
   build:
     docker:
